--- a/index.html
+++ b/index.html
@@ -67,4 +67,6 @@
 </div>
 <canvas id="canvas"></canvas>
 <script src="main.js"></script>
+<script src="colors.js"></script>
+<script src="drawing.js"></script>
 </html>
